# acafeed

./: GenerateFeedDemo.ipynb  README.md  config.toml  feed.xml  feeds.pkl  main.py  pyproject.toml
acafeed/: __init__.py  abbr_table.py  acafeed.py  config.py  entry_parser.py  feedclassifier.py  feedemitter.py  feedmanager.py
notebook/: FeedEmitterDemo.ipynb  model.ipynb  model1.ipynb  model2.ipynb
test/: test_feed.py  test_feed_source.py
